# FaceAnon-export-tools

./: .gitignore  README.md  environment.yml  generate.sh  install.sh  requirements.txt  verify.sh
deep_privacy/: download_files.py  save_torchscript.py
deep_privacy/deep_privacy/: ckpt_map_location.py  config_default.yml  deep_privacy.py  deep_privacy_generator.py  deep_privacy_postprocessing.py  deep_privacy_preprocessing.py
extract_onnx/: install_coreml.sh  keypointrcnn.py  net_s3fd.py  run_onnx.py  save_coreml.py  save_onnx.py  save_torschscript.py
extract_onnx/deep_privacy/: deep_privacy.py  deep_privacy_generator.py
face_alignment_native/: align.py  align_test.py  get_test.sh
generator_native/: generator_test.py
processing/: CMakeLists.txt  local_build.sh
processing/src/: host.cpp  processing.cpp  processing.h  processing_wrapper.cpp  processing_wrapper.h
processing_torchscript/: install.sh  ssfd.py
s3fd/: net_s3fd.py  save_coreml.py  save_onnx.py  ssfd.py
verification/deep_privacy/: download_files.py  generator_test.py  get_test.sh  inout_generate.py  test_deep_privacy.py
verification/s3fd/: align_test.py  get_test.sh
